--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "beacon-dashboard",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.276.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "next build"
+	},
+	"dependencies": {
+		"next": "^15.1.7",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
+	},
+	"devDependencies": {
+		"@types/node": "^22.13.4",
+		"@types/react": "^19.0.8",
+		"@types/react-dom": "^19.0.3",
+		"typescript": "^5.7.3"
+	}
 }
